bug 196241 - Refactors script evaluation pre and post logic into a class. r=timeless, sr=brendan